fix: icon sizing, calendar for Avails, local construction GIF
- Icon cell widened to 80px, labels allow 3 lines (fixes truncation)
- Avails Click uses calendar icon instead of warning triangle
- Under construction GIF hosted locally (hotlinking was blocked)
- GIF placed below text in construction windows

--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
   --win98-light: #dfdfdf;
   --taskbar-height: 28px;
   --icon-size: 48px;
-  --icon-cell-width: 75px;
-  --icon-cell-height: 80px;
+  --icon-cell-width: 80px;
+  --icon-cell-height: 90px;
 }
 
 /* === Win98 Cursors === */
@@ -125,11 +125,11 @@ body {
   font-size: 11px;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
-  max-width: 70px;
+  max-width: 76px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   line-height: 1.3;
   margin-top: 2px;
